--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
 		"test": "vitest"
 	},
 	"dependencies": {
+		"@modelcontextprotocol/sdk": "1.17.2",
 		"@toon-format/toon": "^1.0.0",
 		"fastmcp": "^3.23.0",
 		"tsx": "^4.20.6",
 		"zod": "^4.1.12"
-	},
-	"overrides": {
-		"@modelcontextprotocol/sdk": "1.17.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.5",
