--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"tsx": "^4.20.6",
 		"zod": "^4.1.12"
 	},
+	"overrides": {
+		"@modelcontextprotocol/sdk": "1.17.2"
+	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.5",
 		"@types/node": "^24.10.1",
