--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"test": "vitest"
 	},
 	"dependencies": {
+		"@modelcontextprotocol/sdk": "1.17.2",
 		"@toon-format/toon": "^1.0.0",
 		"fastmcp": "^3.23.0",
 		"tsx": "^4.20.6",
@@ -21,8 +22,5 @@
 		"@types/node": "^24.10.1",
 		"typescript": "^5.9.3",
 		"vitest": "^4.0.9"
-	},
-	"overrides": {
-		"@modelcontextprotocol/sdk": "1.17.2"
 	}
 }
