--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-	"name": "toon-mcp",
-	"version": "1.0.0",
-	"type": "module",
-	"bin": {
-		"toon-mcp": "./index.ts"
-	},
-	"scripts": {
-		"start": "tsx index.ts --transport http-stream",
-		"start:stdio": "tsx index.ts",
-		"test": "vitest"
-	},
-	"dependencies": {
-		"@modelcontextprotocol/sdk": "1.23.0",
-		"@toon-format/toon": "^1.0.0",
-		"fastmcp": "^3.25.0",
-		"tsx": "^4.21.0",
-		"zod": "^4.1.13"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.3.8",
-		"@types/node": "^24.10.1",
-		"typescript": "^5.9.3",
-		"vitest": "^4.0.14"
-	}
+  "name": "toon-mcp",
+  "version": "1.0.0",
+  "type": "module",
+  "bin": {
+    "toon-mcp": "./index.ts"
+  },
+  "scripts": {
+    "start": "tsx index.ts --transport http-stream",
+    "start:stdio": "tsx index.ts",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "1.24.3",
+    "@toon-format/toon": "^2.1.0",
+    "fastmcp": "^3.25.0",
+    "tsx": "^4.21.0",
+    "zod": "^4.1.13"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.3.8",
+    "@types/node": "^24.10.1",
+    "@vitest/coverage-v8": "^4.0.15",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.15"
+  }
 }
